--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 alembic==1.13.1
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
 colorlog==6.8.2
 contourpy==1.2.1
 cycler==0.12.1
+docker-pycreds==0.4.0
 filelock==3.15.1
 fonttools==4.53.0
 fsspec==2024.6.0
+gitdb==4.0.11
+GitPython==3.1.43
 greenlet==3.0.3
+idna==3.7
 Jinja2==3.1.4
 joblib==1.4.2
 kiwisolver==1.4.5
@@ -34,14 +41,21 @@ packaging==24.1
 pandas==2.2.2
 pathlib==1.0.1
 pillow==10.3.0
+platformdirs==4.2.2
 plyer==2.1.0
+protobuf==5.27.1
+psutil==5.9.8
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
+requests==2.32.3
 scikit-learn==1.5.0
 scipy==1.13.1
+sentry-sdk==2.5.1
+setproctitle==1.3.3
 six==1.16.0
+smmap==5.0.1
 SQLAlchemy==2.0.30
 sympy==1.12.1
 threadpoolctl==3.5.0
@@ -52,3 +66,5 @@ tqdm==4.66.4
 triton==2.3.1
 typing_extensions==4.12.2
 tzdata==2024.1
+urllib3==2.2.1
+wandb==0.17.1
