--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ Jinja2==3.1.4
 joblib==1.4.2
 kiwisolver==1.4.5
 laspy==2.5.3
+laszip==0.2.3
+lazrs==0.5.3
 Mako==1.3.5
 MarkupSafe==2.1.5
 matplotlib==3.9.0
@@ -52,6 +54,7 @@ PyYAML==6.0.1
 requests==2.32.3
 scikit-learn==1.5.0
 scipy==1.13.1
+seaborn==0.13.2
 sentry-sdk==2.5.1
 setproctitle==1.3.3
 six==1.16.0
