--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,35 @@
-alembic==1.13.1
-certifi==2024.6.2
-charset-normalizer==3.3.2
-click==8.1.7
-colorlog==6.8.2
-contourpy==1.2.1
-cycler==0.12.1
-docker-pycreds==0.4.0
-filelock==3.15.1
-fonttools==4.53.0
-fsspec==2024.6.0
-gitdb==4.0.11
-GitPython==3.1.43
-greenlet==3.0.3
-idna==3.7
-Jinja2==3.1.4
-joblib==1.4.2
-kiwisolver==1.4.5
-laspy==2.5.3
+alembic==1.13.1+computecanada
+appdirs==1.4.4+computecanada
+click==8.1.7+computecanada
+colorlog==6.8.2+computecanada
+docker-pycreds==0.4.0+computecanada
+filelock==3.13.1+computecanada
+fsspec==2024.6.0+computecanada
+gitdb==4.0.11+computecanada
+GitPython==3.1.40+computecanada
+greenlet==2.0.2+computecanada
+joblib==1.4.2+computecanada
+laspy==2.5.1+computecanada
 laszip==0.2.3
-lazrs==0.5.3
-Mako==1.3.5
-MarkupSafe==2.1.5
-matplotlib==3.9.0
-more-itertools==10.3.0
-mpmath==1.3.0
-networkx==3.3
-numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.5.40
-nvidia-nvtx-cu12==12.1.105
-optuna==3.6.1
-packaging==24.1
-pandas==2.2.2
-pathlib==1.0.1
-pillow==10.3.0
-platformdirs==4.2.2
+Mako==1.3.3+computecanada
+networkx==3.3+computecanada
+numpy==1.26.4+computecanada
+optuna==3.6.1+computecanada
+pathlib==1.0.1+computecanada
+Pillow_SIMD==9.0.0.post1+computecanada
 plyer==2.1.0
-protobuf==5.27.1
-psutil==5.9.8
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-pytz==2024.1
-PyYAML==6.0.1
-requests==2.32.3
-scikit-learn==1.5.0
-scipy==1.13.1
-seaborn==0.13.2
-sentry-sdk==2.5.1
-setproctitle==1.3.3
-six==1.16.0
-smmap==5.0.1
-SQLAlchemy==2.0.30
-sympy==1.12.1
-threadpoolctl==3.5.0
-torch==2.3.1
-torchaudio==2.3.1
-torchvision==0.18.1
-tqdm==4.66.4
-triton==2.3.1
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.1
-wandb==0.17.1
+protobuf==4.25.2+computecanada
+scikit_learn==1.4.2+computecanada
+seaborn==0.13.2+computecanada
+sentry_sdk==2.2.1+computecanada
+setproctitle==1.3.2+computecanada
+smmap==5.0.1+computecanada
+SQLAlchemy==2.0.28+computecanada
+threadpoolctl==3.5.0+computecanada
+torch==2.3.0+computecanada
+torchaudio==2.3.0+computecanada
+torchtext==0.18.0+computecanada
+torchvision==0.18.0+computecanada
+tqdm==4.66.4+computecanada
+typing_extensions==4.12.2+computecanada
+wandb==0.16.0+computecanada
