--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,4 @@ torchtext==0.18.0+computecanada
 torchvision==0.18.0+computecanada
 tqdm==4.66.4+computecanada
 typing_extensions==4.12.2+computecanada
+wandb==0.16.0+computecanada
