--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ GitPython==3.1.40+computecanada
 greenlet==2.0.2+computecanada
 joblib==1.4.2+computecanada
 laspy==2.5.1+computecanada
+lightning==2.2.1+computecanada
+lightning_utilities==0.11.3.post0+computecanada
 Mako==1.3.3+computecanada
 networkx==3.3+computecanada
 numpy==1.26.4+computecanada
@@ -17,6 +19,7 @@ optuna==3.6.1+computecanada
 pathlib==1.0.1+computecanada
 Pillow_SIMD==9.0.0.post1+computecanada
 protobuf==4.25.2+computecanada
+pytorch_lightning==2.2.1+computecanada
 scikit_learn==1.4.2+computecanada
 seaborn==0.13.2+computecanada
 sentry_sdk==2.2.1+computecanada
@@ -26,6 +29,8 @@ SQLAlchemy==2.0.28+computecanada
 threadpoolctl==3.5.0+computecanada
 torch==2.3.0+computecanada
 torchaudio==2.3.0+computecanada
+torcheval==0.0.7+computecanada
+torchmetrics==1.4.0.post0+computecanada
 torchtext==0.18.0+computecanada
 torchvision==0.18.0+computecanada
 tqdm==4.66.4+computecanada
